# content-management-and-discovery-system

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: auth.py  cache.py  celery_app.py  config.py  security.py
app/core/database/: db.py
content/adapters/: read_cache.py  read_inprocess.py
content/adapters/outbound/: cache_redis.py  indexer_opensearch.py
content/domain/entities/: __init__.py  content.py  imports.py  media.py
content/index/: transformers.py
content/ports/: read_port.py
content/routers/: __init__.py  contents.py  imports.py  media.py
content/services/: __init__.py  content_service.py  media_service.py
content/tasks/: __init__.py  indexing.py
discovery/ports/: content_catalog_port.py  search_port.py
discovery/routers/: __init__.py  discovery.py
discovery/services/: discovery_service.py
docs/: 00-Overview.md  01-Architecture.md  02-Design-Philosophy.md  03-DDD-and-Separation-of-Concerns.md  04-API-Documentation.md  05-Business-Flows.md  06-Deployment.md  07-Future-Work.md
migrations/: env.py
migrations/versions/: 1fbe8b4c1564_init_models.py  705f8bcab00c_seed_admin_user.py
shared/: wiring.py
shared/abstracts/: abstract_repository.py
shared/entities/: content.py  media.py
users/entities/: role.py  user.py
users/models/: role.py  user.py
users/repositories/: role_repository.py  user_repository.py
users/routers/: __init__.py  auth.py  roles.py  users.py
users/services/: auth_service.py  role_service.py  user_service.py
(+18 files in other folders)
